# Tasker-jack-plugin

./: CMakeLists.txt  README.md  main.cpp
